CamelCasify the variables introduced + add description for `functionStateId`
