# swagger.yaml
@@ -38,7 +38,7 @@ paths:
               Basic:
                 value:
                   rml: "@prefix rr: <http://www.w3.org/ns/r2rml#>. @prefix rml: <http://semweb.mmlab.be/ns/rml#>. @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>. @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>. @prefix ql: <http://semweb.mmlab.be/ns/ql#>. @prefix map: <http://mapping.example.com/>.  map:map_person_0 rml:logicalSource map:source_0;     a rr:TriplesMap;     rdfs:label \"person\";     rr:subjectMap map:s_0;     rr:predicateObjectMap map:pom_0, map:pom_1. map:om_0 a rr:ObjectMap;     rr:constant \"http://xmlns.com/foaf/0.1/Person\";     rr:termType rr:IRI. map:om_1 a rr:ObjectMap;     rml:reference \"firstname\";     rr:termType rr:Literal. map:pm_0 a rr:PredicateMap;     rr:constant rdf:type. map:pm_1 a rr:PredicateMap;     rr:constant <http://example.com/name>. map:pom_0 a rr:PredicateObjectMap;     rr:predicateMap map:pm_0;     rr:objectMap map:om_0. map:pom_1 a rr:PredicateObjectMap;     rr:predicateMap map:pm_1;     rr:objectMap map:om_1. map:s_0 a rr:SubjectMap;     rr:template \"http://example.com/{firstname}\". map:source_0 a rml:LogicalSource;     rml:source \"data.json\";     rml:iterator \"$.persons[*]\";     rml:referenceFormulation ql:JSONPath."
-                  function_state_id: "1688549879688"
+                  functionStateId: "1688549879688"
                   sources:
                     data.json: "{     \"persons\": [         {             \"firstname\": \"John\",             \"lastname\": \"Doe\"         },         {             \"firstname\": \"Jane\",             \"lastname\": \"Smith\"         },         {             \"firstname\": \"Sarah\",             \"lastname\": \"Bladinck\"         }     ] }"
               Target:
@@ -114,6 +114,12 @@ components:
     Execute:
       type: "object"
       properties:
+        functionStateId:
+          type: "string"
+          example: "1688549879688"
+          description: "Optional. The user can use this key to identify the state used by stateful functions during the
+                        RML mapping process. Requests using the same `functionStateId` use the same state, which gets
+                        initialized during the first request."
         sources:
           type: "object"
           example: >
